modified header section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title> Bloggers Inc </title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   </head>
@@ -17,23 +17,24 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Post</a></li>
         </nav>
-      </header>
+      
 
       <section class="hero">
         <div class="background-image"></div>
         <div class="hero-content">
           <h1>Our Blog</h1>
-          <h3>Unmissable content about relevent news for you around the world</h3>
+          <h3>relevent news for you around the world</h3>
           <a href="#" class="btn"> Subscribe </a>
         </div>
       </section>
+      </header>
       <!--Main content-->
       <section class="main">
 
       </section>
       <!--sidebar-->
       <section class="sidebar">
-        
+
       </section>
       <footer>
         <h3>Using Flexbox and Grid together layout</h3>
