--- a/index.html
+++ b/index.html
@@ -13,28 +13,47 @@
       <header>
         <h2><a href="#">Bloogers Inc.</a></h2>
         <nav>
-          <li><a href="#" class="active">Home</a></li>
+          <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Post</a></li>
         </nav>
-      
+      </header>
 
       <section class="hero">
-        <div class="background-image"></div>
         <div class="hero-content">
           <h1>Our Blog</h1>
           <h3>relevent news for you around the world</h3>
           <a href="#" class="btn"> Subscribe </a>
         </div>
       </section>
-      </header>
       <!--Main content-->
       <section class="main">
+        <div class="content-block-info">
+          <h3>View Grid Help</h3>
+          <p>See tips and tricks for CSS Grid Layouts...</p>
+          <button>Read</button>
+        </div>
 
+        <div class="content-block-info">
+         <h3>View Flexbox Help</h3>
+          <p>See tips and tricks for Flexbox layouts...</p>
+          <button>Read</button>
+        </div>
+
+        <div class="content-block-info">
+         <h3>View Combo Help</h3>
+         <p>See tips and tricks for combined layouts...</p>
+         <button>Read</button>
+        </div>
       </section>
       <!--sidebar-->
       <section class="sidebar">
-
+        <h3>recent posts</h3>
+        <ul>
+          <li> Post One </li>
+          <li> Post Two </li>
+          <li> Post Three </li>
+        </ul>
       </section>
       <footer>
         <h3>Using Flexbox and Grid together layout</h3>
