updated index page with link to blog post mock

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <span></span>
             <p>Intro to basics of web design</p>
             <br>
-            <a href="#" class="btn">read more ..</a>
+            <a href="blog.html" class="btn">read more ..</a>
           </div>
         </div>
 
@@ -57,7 +57,7 @@
             <span></span>
             <p>Creating interactive pages</p>
             <br>
-            <a href="#" class="btn">read more ..</a>
+            <a href="blog.html" class="btn">read more ..</a>
           </div>
         </div>
 
@@ -71,7 +71,7 @@
             <span></span>
             <p>How to use Flexbox layouts</p>
             <br>
-            <a href="#" class="btn">read more ..</a>
+            <a href="blog.html" class="btn">read more ..</a>
           </div>
         </div>
 
