modified index and blog page need to adjust pictures for mobile still

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title> Jonathan Cochran | Web Developer </title>
     <link rel="stylesheet" href="css/topo.css">
     <link rel="stylesheet" href="css/grid.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/e0c76997cd.js" crossorigin="anonymous"></script>
   </head>
   <body>
 
@@ -17,7 +17,7 @@
         <nav>
           <li><a href="#" class="active">Home</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="#">Post</a></li>
+          <li><a href="blog.html">Post</a></li>
         </nav>
       </header>
 
@@ -63,7 +63,7 @@
 
         <div class="blog-card">
           <div class="photo">
-            <img src="img/event3.jpg" alt="current events">
+            <img src="img/sc1.jpg" alt="current events">
           </div>
           <div class="desc">
             <h3>Flexbox</h3>
@@ -80,9 +80,9 @@
       <footer class="footer">
         <div class="social">
           <nav>
-            <li>twitter ph</li>
-            <li>facebook ph</li>
-            <li> instagram ph</li>
+            <li><i class="fab fa-twitter-square fa-2x"></i></li>
+            <li><i class="fab fa-facebook-square fa-2x"></i></li>
+            <li><i class="fab fa-instagram fa-2x"></i></li>
           </nav>
         </div>
         <div class="copy">
