--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <title> Jonathan Cochran | Web design </title>
     <style media="screen">
       @import url('css/topo.css');
-      @import url('css/blog.css')
+      @import url('css/blog.css');
     </style>
   </head>
   <body>
@@ -14,9 +14,9 @@
         <h1><a href="#">Bloggers Inc.</a></h1>
       </div>
       <nav>
-        <li><a href="#" class="active">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">Post</a></li>
+        <li><a href="#" class="active">Post</a></li>
       </nav>
     <section class="hero">
       <div class="background-image"></div>
