--- a/index.html
+++ b/index.html
@@ -2,97 +2,82 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title> Jonathan Cochran | Web Developer </title>
-    <link rel="stylesheet" href="css/topo.css">
-    <link rel="stylesheet" href="css/grid.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> Jonathan Cochran | Web Developer Blog</title>
+    <meta name="description" content="Jonathan's Web Blog">
+    <link rel="stylesheet" href="css/main.css">
     <script src="https://kit.fontawesome.com/e0c76997cd.js" crossorigin="anonymous"></script>
   </head>
   <body>
-
-      <!--header section-->
-      <header>
-        <div class="logo">
-          <h1><a href="#">Bloggers Inc.</a></h1>
-        </div>
-        <nav>
-          <li><a href="#" class="active">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="blog.html">Post</a></li>
-        </nav>
-      </header>
-
-      <section class="hero">
+    <div class="container-grid">
+        <header class="header">
+          <div class="logo">
+            <span class="logo-icon"><i class="fab fa-blogger"></i></span>
+          </div>
+          <ul class="nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="blog.html">Post</a></li>
+          </ul>
+        </header>
+      <div class="hero">
         <div class="background-image"></div>
         <div class="hero-content">
           <h1>Jon's Web Blog</h1>
-          <h2>My passion for web and mobile development</h2>
+          <h2>Web Series on Development and more</h2>
           <br>
-          <a href="#" class="btn"> Subscribe </a>
+          <button type="button" name="button" class="btn"> Subscribe!</button>
         </div>
-      </section>
-
-      <section class="feature">
-
-        <div class="blog-card">
-          <div class="photo">
-            <img src="img/macbook1.jpg" alt="current events">
+      </div>
+      <div class="main">
+        <!-- one -->
+        <div class="card">
+          <div class="card-img">
+            <img src="img/dual.jpg" alt="computer screen with code">
           </div>
-          <div class="desc">
-            <h3>HTML & CSS</h3>
-            <h4>Sept. 10, 2019</h4>
-            <span></span>
-            <p>Intro to basics of web design</p>
-            <br>
-            <a href="blog.html" class="btn">read more ..</a>
+          <div class="card-title">
+            <b>Interviews</b>
+            <p>how to prep</p>
+            <button type="button" name="button" class="btn"> Read more</button>
           </div>
         </div>
+        <!-- end of card -->
 
-        <div class="blog-card">
-          <div class="photo">
-            <img src="img/macbook2.jpg" alt="current events">
+        <!-- one -->
+        <div class="card">
+          <div class="card-img">
+            <img src="img/sc1.jpg" alt="computer screen with code">
           </div>
-          <div class="desc">
-            <h3>JavaScript</h3>
-            <h4>Sept. 15, 2019</h4>
-            <span></span>
-            <p>Creating interactive pages</p>
-            <br>
-            <a href="blog.html" class="btn">read more ..</a>
-          </div>
-        </div>
-
-        <div class="blog-card">
-          <div class="photo">
-            <img src="img/sc1.jpg" alt="current events">
-          </div>
-          <div class="desc">
-            <h3>Flexbox</h3>
-            <h4>Sept. 22, 2019</h4>
-            <span></span>
-            <p>How to use Flexbox layouts</p>
-            <br>
-            <a href="blog.html" class="btn">read more ..</a>
+          <div class="card-title">
+            <b>HTML5 & CSS3</b>
+            <p>new updates html and css</p>
+            <button type="button" name="button" class="btn"> Read more</button>
           </div>
         </div>
+        <!-- end of card -->
 
-      </section>
 
-      <footer class="footer">
-        <div class="social">
-          <nav>
-            <li><i class="fab fa-twitter-square fa-2x"></i></li>
-            <li><i class="fab fa-facebook-square fa-2x"></i></li>
-            <li><i class="fab fa-instagram fa-2x"></i></li>
-          </nav>
+        <!-- three -->
+        <div class="card">
+          <div class="card-img">
+            <img src="img/sc2.jpg" alt="computer screen with code">
+          </div>
+          <div class="card-title">
+            <b>JavaScript</b>
+            <p>what's so good about ES6</p>
+            <button type="button" name="button" class="btn"> Read more</button>
+          </div>
         </div>
-        <div class="copy">
-          <p>&copy Jonathan Cochran 2019 <p>
-        </div>
+        <!-- end of card -->
 
-        <div class="quote">
-          <p> for new beginnings </p>
-        </div>
-      </footer>
+      </div>
+      <div class="footer">
+        <ul class="social-nav">
+        <li><i class="fab fa-twitter-square fa-2x"></i></li>
+        <li><i class="fab fa-facebook-square fa-2x"></i></li>
+        <li><i class="fab fa-instagram fa-2x"></i></li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
