push for updated information and styles

--- a/about.html
+++ b/about.html
@@ -14,46 +14,67 @@
         <div class="logo">
           <span class="logo-icon"><i class="fab fa-blogger"></i></span>
         </div>
-        <ul class="nav">
+        <nav class="nav">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="blog.html">Post</a></li>
-        </ul>
+        </nav>
       </div>
       <div class="content">
         <article class="about">
           <div class="about-img">
             <img src="img/guy1.jpg" alt="male">
           </div>
-          <div class="headline">
-            <h2>About </h2>
-          </div>
           <div class="author-content">
-
-            <div class="item">
-              <i class="fas fa-user-graduate fa-2x"></i>
-              <h3> Education </h3>
-              <ul class="list">
-                <li>Master's in Geospatial Technologies </li>
-                <li>Bachelor's in Digital Technology and Culture</li>
-              </ul>
-              <p> stock photos </p>
-            </div>
-
             <div class="item">
               <i class="fab fa-earlybirds fa-2x"></i>
-              <h3> Experience </h3>
-              <p> lorem ipsum paragraphs here </p>
+              <h3> Author </h3>
+              <p><b>Name:</b> Jonathan Cochran</p>
+              <p><b>Title:</b> IT Project Manager</p>
+              <p><b>Current Company:</b> Washington Military Department</p>
+              <p><b>Bio:</b> Lorem ipsum here ...</p>
+            </div>
+          </div>
+          </article>
+          <section class="extra">
+
+            <div class="edu">
+              <i class="fas fa-user-graduate fa-2x"></i>
+              <h3> Education </h3>
+              <ol class="list">
+                <li>Master's in Geospatial Technologies </li>
+                <li>Bachelor's in Digital Technology and Culture </li>
+              </ol>
             </div>
 
-            <div class="item">
+            <div class="prj">
               <i class="fas fa-tasks fa-2x"></i>
               <h3> Projects </h3>
               <p> Coming soon ... </p>
+              <div class="gallery">
+                <div class="gal1">
+                    1
+                </div>
+                <div class="gal2">
+                      2
+                </div>
+                <div class="gal3">
+                    3
+                </div>
+                <div class="gal4">
+                    4
+                </div>
+                <div class="gal5">
+                    5
+                </div>
+                <div class="gal6">
+                    6
+                </div>
+              </div>
             </div>
 
           </div>
-        </article>
+          </section>
       </div>
       <div class="footer">
         <ul class="social-nav">
