--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
           <div class="logo">
             <span class="logo-icon"><i class="fab fa-blogger"></i></span>
           </div>
-          <ul class="nav">
+          <nav class="nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="blog.html">Post</a></li>
-          </ul>
+          </nav>
         </header>
       <div class="hero">
         <div class="background-image"></div>
@@ -37,7 +37,7 @@
           </div>
           <div class="card-title">
             <b>Interviews</b>
-            <p>how to prep</p>
+            <p>how to prepare</p>
             <button type="button" name="button" class="btn"> Read more</button>
           </div>
         </div>
